--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -37,29 +37,33 @@ body {
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
+
+.video-wrap > div {
+  width: 33%;
+}
 .card_container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
-  padding: 20px;
+  /* padding: 20px; */
 }
 
 .card_container .card {
   position: relative;
   border-radius: 5px;
   overflow: hidden;
-  box-shadow: 0 1px 5px #0001, 0 2px 15px #0001;
-  border: 1px solid #0003;
+  /* box-shadow: 0 1px 5px #0001, 0 2px 15px #0001; */
+  /* border: 1px solid #0003; */
 }
 
 .card_container .card .img {
-  height: 400px;
+  height: 45vh;
 }
 
 .card_container .card .img img {
   display: block;
-  width: 100%;
-  height: 100%;
+  /* width: 100%; */
+  /* height: 50%; */
   object-fit: cover;
   transition: 0.3s ease-in-out;
 }
@@ -78,7 +82,7 @@ body {
   background-color: #2196f342;
   color: #fff;
   bottom: -100%;
-  box-shadow: 0 -8px 10px #0002;
+  /* box-shadow: 0 -8px 10px #0002; */
   padding: 35px 10px;
   backdrop-filter: blur(15px);
   transition: bottom 0.5s;
