--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,7 +1,8 @@
 body {
   /* background-color: #faf8ff; */
-  background-color: #eeeeee;
+  /* background-color: #eeeeee; */
   /* background-color: #e3e0f3; */
+  background-color: black;
 }
 
 .modal-body {
@@ -154,4 +155,49 @@ body {
 .card_container .card:hover .card_footer .social_box a:hover .icon {
   color: #80b0ff;
   text-shadow: 0 1px 4px #fff1;
+}
+
+/* -----particle */
+
+.youtubeList-container {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  /* top: 0;
+  left: 0; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  /* margin: auto; */
+  z-index: 0;
+}
+
+.tsparticles-canvas-el {
+  height: 100vh !important;
+  z-index: 10;
+}
+
+.glass-container {
+  /* width: 700px; */
+  /* height: 375px; */
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  /* background-color: rgba(0, 191, 255, 0.075); */
+  /* background-color: rgba(0, 191, 255, 0.075); */
+
+  box-shadow: rgba(0, 0, 0, 0.3) 2px 8px 8px;
+  border: 2px rgba(255, 255, 255, 0.4) solid;
+  border-bottom: 2px rgba(40, 40, 40, 0.35) solid;
+  border-right: 2px rgba(40, 40, 40, 0.35) solid;
+}
+
+#tsparticles {
+  width: 100vw;
 }
